@@ -19,51 +19,51 @@ int main(int argc, char *argv[]) {
 	b = sp_repr_new("b");
 	c = sp_repr_new("c");
 
-	if (utest_test("rollback of node addition")) {
+	UTEST_TEST("rollback of node addition") {
 		sp_repr_begin_transaction(document);
-		utest_assert(sp_repr_parent(a) == NULL);
+		UTEST_ASSERT(sp_repr_parent(a) == NULL);
 
 		sp_repr_append_child(root, a);
-		utest_assert(sp_repr_parent(a) == root);
+		UTEST_ASSERT(sp_repr_parent(a) == root);
 
 		sp_repr_rollback(document);
-		utest_assert(sp_repr_parent(a) == NULL);
+		UTEST_ASSERT(sp_repr_parent(a) == NULL);
 	}
 
-	if (utest_test("rollback of node removal")) {
+	UTEST_TEST("rollback of node removal") {
 		sp_repr_append_child(root, a);
 
 		sp_repr_begin_transaction(document);
-		utest_assert(sp_repr_parent(a) == root);
+		UTEST_ASSERT(sp_repr_parent(a) == root);
 
 		sp_repr_unparent(a);
-		utest_assert(sp_repr_parent(a) == NULL);
+		UTEST_ASSERT(sp_repr_parent(a) == NULL);
 
 		sp_repr_rollback(document);
-		utest_assert(sp_repr_parent(a) == root);
+		UTEST_ASSERT(sp_repr_parent(a) == root);
 	}
 
 	sp_repr_unparent(a);
 
-	if (utest_test("rollback of node reordering")) {
+	UTEST_TEST("rollback of node reordering") {
 		sp_repr_append_child(root, a);
 		sp_repr_append_child(root, b);
 		sp_repr_append_child(root, c);
 
 		sp_repr_begin_transaction(document);
-		utest_assert(sp_repr_next(a) == b);
-		utest_assert(sp_repr_next(b) == c);
-		utest_assert(sp_repr_next(c) == NULL);
+		UTEST_ASSERT(sp_repr_next(a) == b);
+		UTEST_ASSERT(sp_repr_next(b) == c);
+		UTEST_ASSERT(sp_repr_next(c) == NULL);
 
 		sp_repr_change_order(root, b, c);
-		utest_assert(sp_repr_next(a) == c);
-		utest_assert(sp_repr_next(b) == NULL);
-		utest_assert(sp_repr_next(c) == b);
+		UTEST_ASSERT(sp_repr_next(a) == c);
+		UTEST_ASSERT(sp_repr_next(b) == NULL);
+		UTEST_ASSERT(sp_repr_next(c) == b);
 
 		sp_repr_rollback(document);
-		utest_assert(sp_repr_next(a) == b);
-		utest_assert(sp_repr_next(b) == c);
-		utest_assert(sp_repr_next(c) == NULL);
+		UTEST_ASSERT(sp_repr_next(a) == b);
+		UTEST_ASSERT(sp_repr_next(b) == c);
+		UTEST_ASSERT(sp_repr_next(c) == NULL);
 	}
 
 	sp_repr_unparent(a);
